--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,13 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
           git add ${{ env.app }}-manifest.yml
-          git commit -m 'Copied manifest to replace or create ${{ env.app }}-manifest.yml by GitHub Actions'
+          # Vérifiez s'il y a des modifications à commettre
+          if ! git diff --cached --quiet; then
+              git commit -m 'Copied manifest to replace or create ${{ env.app }}-manifest.yml by GitHub Actions'
+              git push origin main
+          else
+            echo "No changes to commit."
+          fi
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
