--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,8 @@ jobs:
       - name: Copy manifest file
         run: |
           # Copy and rename the manifest.yml to appname-manifest.yml in the spark directory
-          cp manifest.yml spark/${{ env.app }}-manifest.yml
+          ls -la
+          cp ./manifest.yml spark/${{ env.app }}-manifest.yml
           ls -la spark  # List files in the spark directory to verify the copy
 
       # Commit and push the manifest changes to the manifests/spark repository
