--- a/manifest.yml
+++ b/manifest.yml
@@ -2,12 +2,12 @@ apiVersion: "sparkoperator.k8s.io/v1beta2"
 kind: SparkApplication
 metadata:
   name: spark-etl
-  namespace: lakehouse
+  namespace: default
 spec:
   type: Python
   pythonVersion: "3"
   mode: cluster
-  image: "spark-etl:v1.0.0"
+  image: zetsu225/eureka:dev-5bdc11d88758e73abd720c3dfdfa33227b0daf92
   imagePullPolicy: IfNotPresent
   mainApplicationFile: local:///app/main.py
   sparkVersion: "3.3.2"
@@ -18,16 +18,16 @@ spec:
     spark.sql.extensions: "org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions,org.projectnessie.spark.extensions.NessieSparkSessionExtensions"
     spark.sql.catalog.standardized.io-impl: "org.apache.iceberg.aws.s3.S3FileIO"
     spark.sql.catalog.standardized.warehouse: "s3a://standardized/"
-    spark.sql.catalog.standardized.s3.endpoint: "http://minio.lakehouse.svc.cluster.local"
+    spark.sql.catalog.standardized.s3.endpoint: "http://minio.minio.svc.cluster.default:9000"
     spark.sql.catalog.standardized.catalog-impl: "org.apache.iceberg.nessie.NessieCatalog"
-    spark.sql.catalog.standardized.uri: "http://nessie.lakehouse.svc.cluster.local:19120/api/v1/"
+    spark.sql.catalog.standardized.uri: "http://nessie.default.svc.cluster.default:19120/api/v1/"
     spark.sql.catalog.standardized.authentication.type: "NONE"
     spark.sql.catalog.standardized.ref: "main"
     spark.sql.catalog.standardized: "org.apache.iceberg.spark.SparkCatalog"
   hadoopConf:
-    fs.s3a.access.key: "lakehouse"
-    fs.s3a.secret.key: "lakehouse"
-    fs.s3a.endpoint: "http://minio.lakehouse.svc.cluster.local"
+    fs.s3a.access.key: "minioadmin"
+    fs.s3a.secret.key: "minio@demo!"
+    fs.s3a.endpoint: "http://minio.minio.svc.cluster.default:9000"
     fs.s3a.connection.ssl.enabled: "false"
     fs.s3a.path.style.access: "true"
     fs.s3a.attempts.maximum: "1"
@@ -35,27 +35,27 @@ spec:
     fs.s3a.connection.timeout: "10000"
   driver:
     cores: 1
-    memory: "1024m"
+    memory: "512m"
     labels:
       version: 3.3.2
     serviceAccount: spark
     env:
-        -   name: AWS_REGION
-            value: us-east-1
+        # -   name: AWS_REGION
+        #     value: us-east-1
         -   name: AWS_ACCESS_KEY_ID
-            value: lakehouse
+            value: minioadmin
         -   name: AWS_SECRET_ACCESS_KEY
-            value: lakehouse
+            value: minio@demo!
   executor:
     cores: 1
     instances: 1
-    memory: "1024m"
+    memory: "512m"
     labels:
       version: 3.3.2
     env:
-        -   name: AWS_REGION
-            value: us-east-1
+        # -   name: AWS_REGION
+        #     value: us-east-1
         -   name: AWS_ACCESS_KEY_ID
-            value: lakehouse
+            value: minioadmin
         -   name: AWS_SECRET_ACCESS_KEY
-            value: lakehouse
+            value: minio@demo!
